--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
   "require": {
     "php": ">=7.0",
     "runn/core": "dev-master",
+    "runn/fs": "dev-master",
     "runn/valueobjects": "dev-master"
   },
   "require-dev": {
