--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
       "email": "fasderq@gmail.com"
     }
   ],
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "require": {
-    "php": ">=7.1",
-    "runn/core": "7.1.*",
-    "runn/fs": "7.1.*",
-    "runn/valueobjects": "7.1.*"
+    "php": ">=7.0",
+    "runn/core": "dev-master",
+    "runn/fs": "dev-master",
+    "runn/valueobjects": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "5.*"
