--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Runn Me! HTML Library",
   "keywords": ["runn", "runn.me", "framework", "html", "form", "element"],
   "type": "library",
-  "license": "LGPL v.3",
+  "license": "LGPL-3.0-or-later",
   "authors": [
     {
       "name": "Albert Stepantsev"
