--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "php": ">=7.2",
     "runn/core": "dev-master",
     "runn/fs": "dev-master",
-    "runn/validation": "dev-master"
+    "runn/validation": "dev-master",
+    "runn/valueobjects": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "5.*"
