--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
     "php": ">=7.2",
     "runn/core": "dev-master",
     "runn/fs": "dev-master",
-    "runn/validation": "dev-master",
-    "runn/valueobjects": "dev-master"
+    "runn/validation": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.*"
+    "phpunit/phpunit": "5.*",
+    "runn/valueobjects": "dev-master"
   },
   "autoload": {
     "psr-4": {
