--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
     "php": ">=7.3",
     "runn/core": "7.3.*",
     "runn/fs": "7.3.*",
-    "runn/validation": "7.3.*",
-    "runn/valueobjects": "7.3.*"
+    "runn/validation": "7.3.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.*"
+    "phpunit/phpunit": "5.*",
+    "runn/valueobjects": "7.3.*"
   },
   "autoload": {
     "psr-4": {
