+ Runn\Html\Rendering\escape() function is added

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,9 @@
   "autoload": {
     "psr-4": {
       "Runn\\": "src/"
-    }
+    },
+    "files": [
+      "src/Html/Rendering/functions.php"
+    ]
   }
 }
